# Smart-Walker

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  QUICK_START.md  RASPBERRY_PI_SETUP.md  README.md  README_CODESPACES.  dashboard.html  devcontainer.json  docker-compose  docker-compose.yml  register_device.sql  run-docker.sh  setup-docker-compose.sh  setup.sh
.devcontainer/: devcontainer.json  post-create.sh  start-services.sh
Media Mangement/: IoT Smart Walker for Elderly Assistance System Haris (1).docx  IoT Smart Walker for Elderly Assistance System Noman (1).docx  IoT Smart Walker for Elderly Assistance System hassan (2).docx
frontend/: package.json
frontend/src/lib/: api.ts  auth.ts
frontend/src/pages/: auth.tsx  dashboard.tsx
sensor_reader.py/: heartrate_monitor.py  max30102.py  requirements.txt  send_to_backend.py  sensor_test.py
src/: auth.rs  config.rs  database.rs  fhir_service.rs  handlers.rs  lib.rs  logging.rs  main.rs  main.tsx  metrics.rs  models.rs  redis_cache.rs  sse.rs
src/lib/: api.ts  auth.ts
src/pages/: auth.tsx  dashboard.tsx
tests/: integration_test.rs  property_tests.rs
website/backend/: .env  config.example.toml  config.toml  docker-compose.yml  raspberry-pi-config.txt  register_device.sql  schema.sql  test-api.ps1
website/backend/logs/: audit.log.2026-01-29
website/backend/migrations/: 001_initial_schema.sql
website/backend/src/: config.rs  handlers.rs  middleware.rs  ml_service.rs  redis_cache.rs
website/backend/tests/: integration_test.rs
website/frontend/: index.html  package-lock.json
website/frontend/src/: app.tsx  style.css
workflows/: ci.yml
(+3 files in other folders)
