[package]
name = "medhealth-backend"
version = "0.2.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4"
actix-cors = "0.7"
actix-rt = "2"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }

# Security & Crypto
argon2 = "0.5"
jsonwebtoken = "9"
rand = "0.8"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Logging & Tracing (HIPAA-compliant)
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"
tracing-appender = "0.2"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Validation
validator = { version = "0.18", features = ["derive"] }

# ML & Statistics
ndarray = "0.15"
smartcore = "0.3"

# SSE (Server-Sent Events)
tokio-stream = { version = "0.1", features = ["sync"] }
async-stream = "0.3"

# Metrics & Monitoring
prometheus = { version = "0.13", features = ["process"] }
lazy_static = "1.4"

# Testing
[dev-dependencies]
proptest = "1.4"
quickcheck = "1"
fake = "2.9"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 1
